--- a/www/js/template/profile.html
+++ b/www/js/template/profile.html
@@ -1,3 +1,3 @@
-<div ng-click="profileSelect(profile.id)" ng-class="profile.class">
-  <h4>{{ profile.nickname }}</h4>
+<div ng-click="profileSelect()" ng-class="profile.class">
+  <h4 ng-if="profile.nickname">{{ profile.nickname }}</h4>
 </div>
