--- a/www/css/main.css
+++ b/www/css/main.css
@@ -26,7 +26,7 @@ body {
 	background-size: cover;
 	color: #fff;
 	font-family: 'Ubuntu';
-	font-size: 2rem;
+	font-size: 0;
 }
 
 button[ng-click] {
@@ -38,6 +38,9 @@ button[ng-click] {
 	line-height: 3rem;
 	padding: 0 0.4rem;
 	text-align: center;
+}
+section {
+	font-size: 2rem;
 }
 
 /* Vue: Accueil */
@@ -203,13 +206,25 @@ block {
   width: 50px;
   z-index: 1;
 }
-block[draggable] {
+block.draggable {
   background-color: #fff;
   border-radius: 5px;
   color: #333;
 }
-block[droppable] {
+block.droppable {
   background-color: #ccc;
   box-shadow: -1px 2px 10px 3px rgba(0, 0, 0, 0.3) inset;
   border-radius: 5px;
+}
+section[ng-controller="gameCtrl"] div {
+	display: inline-block;
+	float: left;
+	height: 80%;
+	width: 50%;
+}
+section[ng-controller="gameCtrl"] div:nth-child(1) {
+	background-color: #666;
+}
+section[ng-controller="gameCtrl"] div:nth-child(2) {
+	background-color: #333;
 }
